--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
-://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
+
+# C-a C-a for the Last Active Window
+bind-key C-a last-window
 
 # set window split
 bind-key v split-window -h
@@ -67,6 +69,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# pane resize
+bind > resize-pane -R 20
+bind < resize-pane -L 20
 
 # set to main-horizontal, 60% height for main pane
 bind m set-window-option main-pane-height 60\; select-layout main-horizontal
